--- a/app/src/main/res/layout/anleitung.xml
+++ b/app/src/main/res/layout/anleitung.xml
@@ -8,78 +8,87 @@
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
-    <TextView
-        android:id="@+id/TextView01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Spielanleitung:"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/TextView02"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.016"
-        app:layout_constraintVertical_bias="0.0"></TextView>
 
-    <TextView
-        android:id="@+id/TextView02"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Credits:"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_height="343dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/TextView01"
-        app:layout_constraintHorizontal_bias="0.0"></TextView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/linearLayout"
+        android:id="@+id/constraintLayout2">
+
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Spielanleitung:"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/TextView02"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.045"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"></TextView>
+
+        <TextView
+            android:id="@+id/TextView02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:text="Credits:"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.157"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"></TextView>
+    </android.support.constraint.ConstraintLayout>
 
     <Button
         android:id="@+id/backMenuBtn"
         android:layout_width="112dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="Zurück =)"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="468dp"
         android:layout_height="296dp"
+        android:layout_marginBottom="14dp"
         android:orientation="vertical"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/backMenuBtn"
-        app:layout_constraintLeft_toRightOf="@+id/TextView01"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.503"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="-6dp"
-        tools:layout_editor_absoluteX="114dp">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/constraintLayout2"
+        android:layout_marginLeft="24dp">
 
         <ScrollView
             android:id="@+id/textAreaScroller"
-            android:layout_width="462dp"
+            android:layout_width="match_parent"
             android:layout_height="126dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
@@ -97,33 +106,34 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0">
 
+
             <TextView
                 android:id="@+id/TextView03"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="section 1 :...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    ..text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text..."
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        ..text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text...
+        text...text...text...text...text...text...text...text...text...text..."
                 tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="8dp"></TextView>
+                tools:layout_editor_absoluteY="17dp"></TextView>
         </ScrollView>
 
         <ScrollView
             android:id="@+id/textAreaScroller2"
-            android:layout_width="229dp"
+            android:layout_width="match_parent"
             android:layout_height="129dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
@@ -137,6 +147,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
+
             <TextView
                 android:id="@+id/txtCredits"
                 android:layout_width="match_parent"
@@ -147,6 +158,7 @@
                 tools:layout_editor_absoluteY="255dp"></TextView>
         </ScrollView>
     </LinearLayout>
+
 
 
 </android.support.constraint.ConstraintLayout>
